# b2_driver

./: README.md
b2_base/: CMakeLists.txt  README.md  package.xml
b2_base/config/: b2_driver_params.yaml
b2_base/launch/: b2_base.launch.py  b2_bringup.launch.py
b2_base/scripts/: set_unitree_static_ip.sh
b2_base/src/: b2_cmd_vel_bridge.cpp  b2_state_bridge.cpp
b2_description/: CMakeLists.txt  README.md  package.xml
b2_description/config/: joint_names_b2_description.yaml
b2_description/launch/: b2_description.launch.py  check_joint.rviz
b2_description/urdf/: b2_description.urdf
b2_description/xacro/: leg.xacro  robot.xacro
b2_interface/: CMakeLists.txt  package.xml
b2_interface/msg/: B2BatteryState.msg  B2MotionCommand.msg  B2Status.msg  ControlCommand.msg  ControlFeedback.msg  Status.msg
