<?xml version="1.0"?>
<package format="3">
  <name>b2_driver_description</name>
  <version>0.1.0</version>
  <description>ROS 2 description package for the Unitree B2 robot.</description>
  <maintainer email="user@example.com">shalom</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
